--- a/Prueba/src/main/resources/com/mycompany/prueba/viewContact.fxml
+++ b/Prueba/src/main/resources/com/mycompany/prueba/viewContact.fxml
@@ -9,10 +9,10 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.prueba.ViewContactController">
+<BorderPane id="AnchorPane" prefHeight="400.0" prefWidth="630.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.prueba.ViewContactController">
     
     <center>
-        <VBox alignment="CENTER" spacing="10">
+        <VBox alignment="CENTER" prefHeight="308.0" prefWidth="619.0" spacing="10">
             <HBox alignment="CENTER" spacing="10">
                 <Button fx:id="btnFotoAnterior" text="←" />
                 <Button fx:id="btnFotoSiguiente" text="→" />
@@ -33,28 +33,32 @@
             <Button fx:id="btnEliminar" onAction="#eliminarContacto" text="Eliminar" />
             <Button fx:id="btnSiguiente" text="Siguiente" />
             <Button fx:id="btnCancelar" onAction="#switchCancelar" text="Cancelar" />
+         <Button fx:id="btnVerAsociados" mnemonicParsing="false" onAction="#verContactosAsociados" text="Ver Contactos asociados" />
+         <BorderPane.margin>
+            <Insets bottom="3.0" />
+         </BorderPane.margin>
         </HBox>
     </bottom>
    <top>
       <HBox prefHeight="34.0" prefWidth="590.0" BorderPane.alignment="CENTER">
          <children>
-            <ComboBox fx:id="comboOrdenar" prefHeight="25.0" prefWidth="110.0" promptText="Ordenar por" />
-            <Button fx:id="btnOrdenar" mnemonicParsing="false" text="Ordenar">
+            <TextField fx:id="txtFiltro" promptText="Filtrar por: ">
+               <HBox.margin>
+                  <Insets left="5.0" />
+               </HBox.margin>
+            </TextField>
+            <Button fx:id="btnFiltrar" mnemonicParsing="false" onAction="#filtrarContactos" text="Filtrar">
                <HBox.margin>
                   <Insets left="10.0" />
                </HBox.margin>
             </Button>
             <Label style="-fx-font-size: 18px; -fx-font-weight: bold;" text="Vista de Contacto">
                <HBox.margin>
-                  <Insets left="40.0" />
+                  <Insets left="30.0" right="35.0" />
                </HBox.margin>
             </Label>
-            <TextField fx:id="txtFiltro" promptText="Filtrar por: ">
-               <HBox.margin>
-                  <Insets left="10.0" />
-               </HBox.margin>
-            </TextField>
-            <Button fx:id="btnFiltrar" mnemonicParsing="false" onAction="#filtrarContactos" text="Filtrar">
+            <ComboBox fx:id="comboOrdenar" prefHeight="25.0" prefWidth="110.0" promptText="Ordenar por" />
+            <Button fx:id="btnOrdenar" mnemonicParsing="false" text="Ordenar">
                <HBox.margin>
                   <Insets left="10.0" />
                </HBox.margin>
